add dependenci admin template

--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,11 @@
             <artifactId>shiro-ehcache</artifactId>
             <version>1.2.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.adminfaces</groupId>
+            <artifactId>admin-template</artifactId>
+            <version>1.0.0-RC11</version>
+        </dependency>
         
         <!-- Dependencias de MySQL y H2 -->
         <dependency>
